[metadata]
name = simpleJDB
version = 0.0.6
author = Jan
author_email = krisellp9@gmail.com
description = a simple key based json databse
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Milkman337/simpleJDB/tree/master/simpleJDB
project_urls =
    Bug Tracker = https://github.com/Milkman337/simpleJDB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src